# Kafka_Spark_Project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  streamlit.py
spark-app/: Dockerfile  api_parket_kafka.py  api_to_parquet_kafka.py  api_to_parquet_kafka_streaming.py  parquet_to_consumer.py  parquet_to_csv_consumer.py  requirements.txt
