[tool.poetry]
name = "kafka-spark-project"
version = "0.1.0"
description = ""
authors = ["Felipe Alves <felipealvss.95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
